force-app/main/default/objects/Course_Category__c/Course_Category__c.object-meta.xml
<CustomObject>
    <label>Course Category</label>
    <nameField>
        <displayFormat>CCAT-{0000}</displayFormat>
        <label>Course Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Categories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>