force-app/main/default/objects/Course_Category__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Course Categories</relationshipLabel>
    <relationshipName>Course_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>