force-app/main/default/objects/Course_Category__c/fields/Category_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Category_Picklist__c</fullName>
    <label>Category Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Category</valueSetName>
    </valueSet>
</CustomField>