force-app/main/default/objects/Course_Category__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Course Categories</relationshipLabel>
    <relationshipName>Course_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>